--- a/package.json
+++ b/package.json
@@ -11,8 +11,6 @@
     "@testing-library/jest-dom": "^5.16.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
-    
- 
     "chartjs-plugin-datalabels": "^2.2.0",
     "emailjs-com": "^3.2.0",
     "feather-icons": "^4.29.0",
@@ -33,6 +31,7 @@
     "react-spinners": "^0.14.1",
     "react-spring": "^9.7.4",
     "react-vertical-timeline-component": "^3.6.0",
+    "react-visual-grid": "^0.9.5",
     "recharts": "^2.12.7",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.11",
