--- a/package.json
+++ b/package.json
@@ -8,15 +8,19 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.1",
     "@mui/material": "^6.1.1",
+    "@nextui-org/react": "^2.4.8",
     "@testing-library/jest-dom": "^5.16.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
+    "bootstrap": "^5.3.3",
     "chartjs-plugin-datalabels": "^2.2.0",
     "emailjs-com": "^3.2.0",
     "feather-icons": "^4.29.0",
     "framer-motion": "^7.10.3",
     "react": "^18.0.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
+    "react-bootstrap": "^2.10.5",
+    "react-card-flip": "^1.2.3",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.0.0",
     "react-github-btn": "^1.4.0",
@@ -24,6 +28,7 @@
     "react-loader-spinner": "^6.1.6",
     "react-modal": "^3.15.0",
     "react-player": "^2.16.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-rnd": "^10.3.7",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
@@ -36,7 +41,6 @@
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.11",
     "swiper": "^11.1.14",
-    "tailwindcss": "^3.0.0",
     "twin.macro": "^3.0.0-rc.4"
   },
   "scripts": {
@@ -70,5 +74,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.14"
   }
 }
